--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div id="content1">
       <div class="heading"> <button type="button" class="btn btn-outline-transparent"   ><p id="today"> Today</p></button>
         <button type="button" class="btn btn-outline-transparent"><p id='today1'><strong>Week</strong>  </p></button>
-        <button type="button" class="btn btn-outline-transparent" id="temp" >&#8451;</button>
+        <button type="button" class="btn btn-outline-transparent" id="temp"  style="margin-right: 10px;">&#8451;</button>
         <button type="button" class="btn btn-outline-transparent" id="temp1">&#176;F</button></div>
        
        <div class="cards-container">
