--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="http://127.0.0.1:5501/index.html" "> <img src="cloud.png" alt="" >
-        <a class="navbar-brand" href="http://127.0.0.1:5501/index.html" style="font-size: 20px;">Weather Forecast <br><p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size: 15px;">Saturday 26,December 2021</p></a>
+        <a class="navbar-brand" href="https://rishabh175.github.io/Weather-app/" "> <img src="cloud.png" alt="" >
+        <a class="navbar-brand" href="https://rishabh175.github.io/Weather-app/" style="font-size: 20px;">Weather Forecast <br><p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size: 15px;">Saturday 26,December 2021</p></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
